--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -17,4 +17,18 @@
       </select>
     </div>
   </div>
-
+  <!--タブ End -->
+  <!--Todoリスト Begin-->
+  <table id="todo-table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Todo</th>
+        <th>登録日</th>
+        <th>優先度</th>
+      </tr>
+    </thead>
+    <tbody id="todo-main">
+      <tr></tr>
+    </tbody>
+  </table>
