--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -32,3 +32,20 @@
       <tr></tr>
     </tbody>
   </table>
+  <!--Todoリスト End-->
+  <!--Todo入力フォーム Begin-->
+  <form id="input-form">
+    <div class="input-text">
+      <label for="input-text">Todo</label>
+      <input
+          type="text"
+          name="input-text"
+          placeholder="牛乳を買う"
+      />
+    </div>
+    <div class="submit">
+      <button type="submit">登録</button>
+    </div>
+  </form>
+  <!--Todo入力フォーム End-->
+</div>
