--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -13,3 +13,12 @@ body {
   margin: 30px auto;
   min-height:300px;
 }
+
+#tab {
+  margin-bottom: 15px;
+  display: flex;
+}
+
+#tab .tab-list {
+  margin-left: 15px;
+}
